2008-01-16  Wade Berrier  <wberrier@novell.com>

	* ilconstrast.desktop.in: no extension on icon, remove
	'Application' from Categories.  (standards enforced by rpmlint)

2007-10-01  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (sources): Move Global.cs ...
	(build_source): ... here.

2007-07-06  Wade Berrier  <wberrier@novell.com>

	* ilcontrast.in: search gre.d to aid in finding libgtkembedmoz
	(Stolen from monodevelop wrapper)

2007-01-31  Mike Kestner  <mkestner@novell.com>

	* Window.cs: break a 2.6 dep by removing AboutDialog usage.

2007-01-31  Mike Kestner  <mkestner@novell.com>

	* Makefile.am: make conditional on ENABLE_GECKO.

2007-01-31  Mike Kestner  <mkestner@novell.com>

	* initial checkin.